  on b by default.
* An option is added to the butchering prompt to allow butchering only
  (e)dible corpses.
* Auto-eat now triggers for ghouls if they are rotted.
* The religion screen now shows all god powers, with currently accessible
  powers (per level of piety) being highlighted.
* Many previously hardcoded forced mores are now optional and present in the
  default init.txt.

Stone Soup 0.17 (20151106)
--------------------------

Highlights
----------
* Square line of sight.
* Shorter Lair rune branches.
* New rune vaults for many branches.

Branches, Environment
---------------------
* Snake, Shoals, Swamp and Spider are now all 4 levels long, down from 5.
* Levels no longer have -cTele.
* Shadow Traps have been removed.
* Slime wall damage no longer varies by depth.
* AC now applies before resists for cloud damage.
* Ghostly flame clouds have been renamed to spectral mist clouds.
* Troves no longer ask for items that the player character's species cannot
  use.
* Pandemonium now spawns primarily tier 3 and above demons.
* New altar type: 'ecumenical altars', which allow the player to worship a
  random god.
* New WizLab: Lehudib's Moon Base, where the player can fight the legendary
  Moon Troll.
* Tukima's Studio and Eringya's Formal Garden WizLabs have been removed.

Character
---------
* All races have had their evocations aptitudes reduced by one point.
* MP scaling has been reworked & simplified; MP aptitudes have been adjusted.
* Heavy armour no longer penalizes unarmed combat & throwing speeds.
* Rot is now healed first, instead of last; effectively, rotting reduces the
  effectiveness of healing until cured. The Rot status is also gone, with rot
  taking place immediately.
* Stat loss is no longer regenerated over time; instead, it's restored by XP.
* The deterioration mutation is now only 2 levels, and has a chance of causing
  stat loss whenever the player takes damage, rather than over time.