@@ -1096,7 +1096,7 @@ void game_options::reset_options()
                     "screenshot,monlist,kills,notes");
     if (Version::ReleaseType == VER_ALPHA)
         new_dump_fields("vaults");
-    new_dump_fields("action_counts");
+    new_dump_fields("skill_gains,action_counts");
 
     use_animations = (UA_BEAM | UA_RANGE | UA_HP | UA_MONSTER_IN_SIGHT
                       | UA_PICKUP | UA_MONSTER | UA_PLAYER | UA_BRANCH_ENTRY
